--- a/miosix-kernel/Makefile
+++ b/miosix-kernel/Makefile
@@ -17,7 +17,7 @@ SUBDIRS := $(KPATH) mxgui
 ## List here your source files (both .s, .c and .cpp)
 ##
 SRC :=                                  \
-main.cpp
+main.cpp movements.cpp game.cpp grid.cpp block.cpp input_manager.cpp
 
 ##
 ## List here additional static libraries with relative path
